# dadosempresas-brasil-cnpj

./: .gitignore  README.md  pyproject.toml
src/: columns_layout_cnpj_metadados.json
src/dashboard/: app.py
src/queries/: query_capitalsocial_empresa.sql  query_municipio_estabelecimento.sql  query_porte_empresa.sql
src/raw/: ingestion.py
src/silver/: silver.py
src/transform/: transform.silver.py
src/transform.silver/: transform.py
utils/: read_data_json.py
